# SchiroEngine

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml  scene.srn-scene  sonar-project.properties
.github/workflows/: ci.yml
assets/shaders/: pbr.wgsl
crates/schiro-assets/: Cargo.toml
crates/schiro-assets/src/: gltf.rs  handle.rs  lib.rs  loader.rs  procedural.rs  server.rs  types.rs
crates/schiro-audio/: Cargo.toml
crates/schiro-audio/src/: engine.rs  lib.rs  mixer.rs  source.rs  spatial.rs
crates/schiro-camera/: Cargo.toml
crates/schiro-camera/src/: lib.rs
crates/schiro-core/: Cargo.toml
crates/schiro-core/src/: aabb.rs  color.rs  id.rs  lib.rs  math.rs  profiling.rs
crates/schiro-ecs/: Cargo.toml
crates/schiro-ecs/src/: components.rs  lib.rs  schedule.rs  systems.rs
crates/schiro-editor/: Cargo.toml
crates/schiro-editor/src/: app.rs  browser.rs  command.rs  hierarchy.rs  icons.rs  inspector.rs  lib.rs  main.rs  project.rs  scene.rs  theme.rs  ui.rs  viewport.rs
crates/schiro-editor/src/editor/: gizmo.rs  mod.rs  scene.rs
crates/schiro-editor/src/panels/: hierarchy.rs  inspector.rs  menu_bar.rs  mod.rs  status_bar.rs
crates/schiro-input/: Cargo.toml
crates/schiro-input/src/: action.rs  event.rs  gamepad.rs  keyboard.rs  lib.rs  mouse.rs
crates/schiro-physics/: Cargo.toml
crates/schiro-physics/src/: collider.rs  joint.rs  lib.rs  query.rs  rigid_body.rs  world.rs
crates/schiro-render/: Cargo.toml
crates/schiro-render/src/: camera.rs  device.rs  egui_renderer.rs  environment.rs  gizmo.rs  graph.rs  lib.rs  light.rs  material.rs  mesh.rs  pipeline.rs  surface.rs  texture.rs  viewport.rs
crates/schiro-scene/: Cargo.toml
crates/schiro-scene/src/: lib.rs
crates/schiro-tests/: Cargo.toml
crates/schiro-tests/src/: lib.rs
crates/schiro-tests/tests/: aabb_ray.rs  assets_mesh.rs  assets_server.rs  audio.rs  color.rs  ecs_schedule.rs  ecs_systems.rs  ecs_transform.rs  id.rs  input.rs  inspector_mutation.rs  physics_world.rs  render_mesh.rs  scene_serialize.rs
crates/schiro-tests/tests/common/: mod.rs
crates/schiro-ui/: Cargo.toml
crates/schiro-ui/src/: lib.rs
