[package]
name = "schiro-assets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
schiro-core.workspace = true

tokio.workspace = true
async-channel.workspace = true
async-trait = "0.1"
futures-util.workspace = true
parking_lot.workspace = true
slotmap.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
gltf.workspace = true
base64.workspace = true
glam.workspace = true
image.workspace = true

[lints]
workspace = true
