[package]
name = "schiro-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
schiro-core.workspace = true
schiro-ecs.workspace = true
schiro-assets.workspace = true

kira.workspace = true
glam.workspace = true
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
