[package]
name = "schiro-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Camera types: orbit camera, GPU uniforms and light uniforms"

[dependencies]
schiro-core.workspace = true
glam.workspace = true
bytemuck.workspace = true

[lints]
workspace = true
