[package]
name = "schiro-ecs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
schiro-core.workspace = true

bevy_ecs.workspace = true
bevy_hierarchy.workspace = true
glam.workspace = true
tracing.workspace = true

[lints]
workspace = true
