[package]
name = "schiro-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "schiro-editor"
path = "src/main.rs"

[dependencies]
schiro-core.workspace = true
schiro-ecs.workspace = true
schiro-render.workspace = true
schiro-assets.workspace = true
schiro-audio.workspace = true
schiro-physics.workspace = true
schiro-input.workspace = true
bevy_ecs.workspace = true

egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
wgpu.workspace = true
winit.workspace = true
glam.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
rfd.workspace = true
pollster.workspace = true
tokio.workspace = true

[lints]
workspace = true
