[package]
name = "schiro-render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
schiro-core.workspace = true
schiro-ecs.workspace = true
schiro-camera.workspace = true

wgpu.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
egui = { workspace = true, features = ["default_fonts"] }
egui-wgpu.workspace = true
glam.workspace = true
bytemuck.workspace = true
image.workspace = true
half.workspace = true
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
