[package]
name = "schiro-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Scene serialization data types shared across the workspace"

[dependencies]
serde.workspace = true

[lints]
workspace = true
